## Licensed under the Apache License, Version 2.0 (the "License"); you may not
## use this file except in compliance with the License. You may obtain a copy of
## the License at
##
##   http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
## WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
## License for the specific language governing permissions and limitations under
## the License.

SUBDIRS = build

EXTRA_DIST = \
	demo.mk \
	images/epub-icon.png \
	images/futon-createdb.png \
	images/futon-editdoc.png \
	images/futon-editeddoc.png \
	images/futon-overview.png \
	images/futon-replform.png \
	make.bat \
	Makefile.am \
	src/api/authn.rst \
	src/api/configuration.rst \
	src/api/database.rst \
	src/api/dbmaint.rst \
	src/api/design.rst \
	src/api/documents.rst \
	src/api/local.rst \
	src/api/misc.rst \
	src/api/reference.rst \
	src/api-basics.rst \
	src/changes.rst \
	src/commonjs.rst \
	src/conf.py \
	src/config_reference.rst \
	src/configuring.rst \
	src/ddocs.rst \
	src/errors.rst \
	src/http-proxying.rst \
	src/index.rst \
	src/intro.rst \
	src/json-structure.rst \
	src/os-daemons.rst \
	src/range.rst \
	src/release.rst \
	src/replication.rst \
	src/ssl.rst
